# backed

./: .env  CS-bot.7z  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/core/: __init__.py  config.py  prompts.py
app/data/: seed_knowledge.md
app/models/: __init__.py  schemas.py
app/routers/: __init__.py  support.py
app/services/: __init__.py  domain.py  ingestion.py  llm.py  memory.py  retrieval.py
app/utils/: __init__.py  logger.py
app/workflows/: __init__.py  dragon_funded_graph.py
storage/vector_store/: chroma.sqlite3
